# MOOS-aREST

./: .gitignore  CMakeLists.txt  README.md  aREST.cpp  aREST.h  aREST_Info.cpp  aREST_Info.h  configuration.cpp  main.cpp  paREST.moos  restInterface.cpp  restItem.cpp
design/: SDD001.yml  SDD002.yml  SDD003.yml  SDD004.yml  SDD005.yml  SDD006.yml  SDD007.yml  SDD008.yml  SDD009.yml  SDD010.yml  SDD011.yml  SDD012.yml  SDD013.yml  SDD014.yml  SDD015.yml  SDD016.yml  SDD017.yml  SDD018.yml  SDD019.yml  SDD020.yml  SDD021.yml  SDD022.yml  SDD023.yml  SDD024.yml  SDD025.yml  SDD026.yml  SDD027.yml  SDD028.yml  SDD029.yml  SDD030.yml  SDD031.yml  SDD032.yml  SDD033.yml  SDD034.yml  SDD035.yml  SDD036.yml  SDD037.yml  SDD038.yml  SDD039.yml  SDD040.yml  (+338 more)
requirements/: SRD001.yml  SRD002.yml  SRD003.yml  SRD004.yml  SRD005.yml  SRD006.yml  SRD007.yml  SRD008.yml  SRD009.yml  SRD010.yml  SRD011.yml  SRD012.yml  SRD013.yml  SRD014.yml  SRD015.yml  SRD016.yml  SRD017.yml  SRD018.yml  SRD019.yml  SRD020.yml  SRD021.yml  SRD022.yml  SRD023.yml  SRD024.yml  SRD025.yml  SRD026.yml  SRD027.yml  SRD028.yml  SRD029.yml  SRD030.yml  SRD031.yml  SRD032.yml  SRD033.yml  SRD034.yml  SRD035.yml  SRD036.yml  SRD037.yml  SRD038.yml  SRD039.yml  SRD040.yml  (+40 more)
schema/: analogread_schema.json  analogwrite_schema.json  digitalread_schema.json  digitalwrite_schema.json  function_schema.json  interface_schema.json  variable_schema.json
test/hardware/: test-shield.brd  test-shield.sch
test/requirements/: TST001.yml  TST002.yml  TST003.yml  TST004.yml  TST005.yml  TST006.yml  TST007.yml  TST008.yml  TST009.yml  TST010.yml  TST011.yml  TST012.yml  TST013.yml  TST014.yml  TST015.yml  TST016.yml  TST017.yml  TST018.yml  TST019.yml  TST020.yml  TST021.yml  TST022.yml  TST023.yml  TST024.yml  TST025.yml  TST026.yml  TST027.yml  TST028.yml  TST029.yml  TST030.yml  TST031.yml  TST032.yml  TST033.yml  TST034.yml  TST035.yml  TST036.yml  TST037.yml  TST038.yml  TST039.yml
